styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    min-height: 100vh;
}

.container {
    display: grid;
    height: 100vh;
    grid-template-columns: 1fr;
    grid-template-rows: 0.2fr 0.8fr;
    grid-template-areas:
     "header"
     "main"
    ;
}

header {
    grid-area: header;
    background-color: black;
    color: #FFD93D;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#imdb {
    font-size: 5rem;
}

#social {
    font-size: 2rem;
    color:#F6F1E9;
}

.fa-brands {
    padding: 10px;
    transition: transform .2s;
    color:#F6F1E9;
}

.fa-brands:hover {
    transform: scale(1.5);
}


main {
    grid-area: main;
    margin-left: 10%;
    margin-right: 10%;
}

table {
    width: 100%;
    overflow-y: auto;
    padding: 5%;
    word-wrap: break-word;
}

table td {
    border: 2px solid black;
    border-radius: 5px;
    height: 150px;
    text-align: center;
    font-size: 3.5rem;
    background-color: #F6F1E9;
}

table th {
    font-size: 1.5rem;
    text-align: start;
}

tr img {
    min-width: 100%;
    height: 100%;
    display: flex;
}

#image {
    width: 10%;
}

#title {
    width: 60%;
    text-align: start;
    padding-left: 5%;
}

#score {
    width: 10%;
}

footer {
    display: none;
}

@media only screen and (max-width: 480px) {
    .container {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 0.2fr 0.6fr 0.2fr;
        grid-template-areas: 
        "header"
        "main"
        "footer";
}

footer {
    grid-area: footer;
    background-color: black;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100px;
}

main {
    margin-left: 0%;
    margin-right: 0%;
}

table td {
    border: 2px solid black;
    border-radius: 5px;
    height: 150px;
    text-align: center;
    font-size: 1.5rem;
    background-color: #F6F1E9;
}

header #social {
    display: none;
}

footer #social-2 {
    font-size: 2rem;
    color:#F6F1E9;
}

.fa-brands {
    transition: transform .2s;
}

.fa-brands:hover {
    transform: scale(1.5);
}

}

